--- a/Node.jsServer/package.json
+++ b/Node.jsServer/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ParysUnangst/Applications-development-.git"
+    "url": "git+https://github.com/ParysUnangst/Node.js-and-Express-.git"
   },
   "keywords": [
     "example",
