--- a/RegularExpressions/package.json
+++ b/RegularExpressions/package.json
@@ -4,11 +4,11 @@
   "description": "An express NodeJS server that utilizes regular expressions in route paths to handle multiple URL variations. ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \\\\\\\"Error: no test specification\\\\\\\" && exit 1"
+    "test": "echo \"Error: no test specification\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "    \"url\": \"git+https://github.com/ParysUnangst/Applications-development-.git\""
+    "url": "git+https://github.com/ParysUnangst/Node.js-and-Express-.git"
   },
   "keywords": [
     "Express",
