--- a/express/package.json
+++ b/express/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ParysUnangst/Applications-development-.git"
+    "url": "git+https://github.com/ParysUnangst/Node.js-and-Express-.git"
   },
   "keywords": [
     "Express",
